fix mobile: improve position of share buttons on mobile (#18)

--- a/styles/main.css
+++ b/styles/main.css
@@ -659,8 +659,7 @@ body {
     }
 
     #share-buttons-container {
-        width: 100vw;
-        bottom: -9.5vh;
+        width: 95vw;
     }
 }
 
